--- a/index.html
+++ b/index.html
@@ -1,37 +1,19 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href="./material.min.css">
+<script src="./material.min.js"></script>
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <html lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
-	<!--  <meta charset="UTF-8">
-	<title>Steven Shih</title> -->
-	<html class="no-js" lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index.php</title>
-    
-  <link rel="stylesheet" href="css/foundation.min.css">
-    <link rel="stylesheet" href="css/app.css">
-
-    <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="img/favicons/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="img/favicons/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="img/favicons/manifest.json">
-    <link rel="mask-icon" href="img/favicons/safari-pinned-tab.svg" color="#7b7b7b">
-    <link rel="shortcut icon" href="img/favicons/favicon.ico" sizes="256x256">
-    <meta name="msapplication-config" content="img/favicons/browserconfig.xml">
-    
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-
-    <link rel="stylesheet" href="css/ionicons.min.css">
-
-    <link rel="stylesheet" href="css/animate.css">
-
-  </head>
+	<meta charset="UTF-8">
+	<title>Steven Shih</title>
 </head>
 <body>
 <p>Hi :D</p>
 	<button type="submit">Press</button>
+	<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+  Button
+</button>
 </body>
 </html>
+
