--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="./material.min.css">
-<script src="./material.min.js"></script>
+<link rel="stylesheet" href="material_library/material.min.css">
+<script src="material_library/material.min.js"></script>
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <html lang="en">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
