--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
           <div class="navlist">
             <ul class="nav navbar-nav">
               <li>
-                <a href="#" class="btn btn-about"></a>         
+                <a href="#" class="btn btn-about" onclick=""></a>         
                 <span class="hover-hide hover-about">about</span>
               </li>
               <li>
-                <a href="#" class="btn btn-resume"></a> 
+                <a href="#" class="btn btn-resume" onclick=""></a> 
                 <span class="hover-hide hover-resume">resume</span>
               </li>
               <li>
-                <a href="#" class="btn btn-projects"></a>
+                <a href="#" class="btn btn-projects" onclick=""></a>
                 <span class="hover-hide hover-projects">projects</span>
               </li>
               <li>
-                <a href="#" class="btn btn-contact"></a>
+                <a href="#" class="btn btn-contact" onclick=""></a>
                 <span class="hover-hide hover-contact">contact</span>
               </li>
             </ul>
