--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
           <div class="navlist">
             <ul class="nav navbar-nav">
               <li>
-                <a href="#" class="btn btn-about" onclick=""></a>         
+                <a href="#" class="btn btn-about"></a>         
                 <span class="hover-hide hover-about">about</span>
               </li>
               <li>
-                <a href="#" class="btn btn-resume" onclick=""></a> 
+                <a href="#" class="btn btn-resume"></a> 
                 <span class="hover-hide hover-resume">resume</span>
               </li>
               <li>
-                <a href="#" class="btn btn-projects" onclick=""></a>
+                <a href="#" class="btn btn-projects"></a>
                 <span class="hover-hide hover-projects">projects</span>
               </li>
               <li>
-                <a href="#" class="btn btn-contact" onclick=""></a>
+                <a href="#" class="btn btn-contact"></a>
                 <span class="hover-hide hover-contact">contact</span>
               </li>
             </ul>
@@ -57,10 +57,12 @@
 <section id="about-me">
   <div class="container">
     <div class="row">
-      <article>
-        <h2>Hello.</h2>
-        <p>I am a computer engineering student at the University of British Columbia.</p>
-      </article>
+      <div class="col-md-12">
+        <article>
+          <h2>Hello.</h2>
+          <p>I am a computer engineering student at the University of British Columbia.</p>
+        </article>
+      </div>
     </div>
   </div>
 </section>
@@ -68,12 +70,52 @@
 <section id="mystuff">
   <div class="container">
     <div class="row">
-      <article>
-        <h2>Who am I?</h2>
-      </article>
+      <div class="col-md-12 col-xs-12">
+        <article>
+          <h2>Who am I?</h2>
+        </article>
+      </div>
     </div>
   </div>
 </section>
+
+
+
+<!-- <footer class="footer" id="footer-info">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 col-xs-12">
+        <ul class="footer-list list-inline">
+          <li class="github">
+            <a href="#"></a>
+            <span class="icon icon-github">Github</span>
+          </li>
+          <li class="linkedin">
+            
+          </li>
+          <li></li>
+        </ul>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12 col-xs-12"></div>
+    </div>
+  </div>
+</footer> -->
+
+<footer class="footer" id="footer-info">
+  <div class="container footer-list">
+    <div class="row">
+      <div class="footer-icons col-md-12 col-xs-12">
+        <a href="http://www.linkedin.com/in/stevenshih1997"><span class="icon icon-linkedin"></span></a>
+        <a href="https://github.com/stevenshih1997"><span class="icon icon-github"></span></a>
+        <a href="https://angel.co/steven-shih-1"><span class="icon icon-angelList"></span></a>
+      </div>
+    </div>
+  </div>
+</footer>
+
+
 
 <script src="./Scripts/jquery-3.2.1.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -82,5 +124,6 @@
 <script src="./Scripts/jQuery.headroom.js"></script>
 <script src="./Scripts/navbar.js"></script>
 <script src="./Scripts/animated-name.js"></script>
+<script src="./Scripts/custom.js"></script>
 </body>
 </html>
