--- a/projects.html
+++ b/projects.html
@@ -2,23 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Steven Shih</title>
+  <title>Projects</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="./Stylesheets/navbar.css">
-  <link rel="stylesheet" href="./Stylesheets/custom.css">
+  <link rel="stylesheet" href="./Stylesheets/projects.css">
 </head>
 <body>
+
 
 <header class="navbar-header" id="header">
   <nav class="navbar navbar-fixed-top">
     <div class="nav-container container">
       <div class="row">
-        <div class="col-md-4 col-xs-4">
+        <div class="col-md-5 col-xs-5">
           <div class="navbar-header">
             <a href="#" class="navbar-brand" id="logo"></a>
           </div>
         </div>
-        <div class="nav-icon-row col-md-8 col-xs-8">
+        <div class="nav-icon-row col-md-7 col-xs-7">
           <div class="navlist">
             <ul class="nav navbar-nav">
               <li>
@@ -45,39 +46,16 @@
   </nav>
 </header>
 
-
-<section class="container-fluid" id="name-intro">
-    <!-- <div class="animated-name container"></div> -->
-  <div class="bg-image row">
+<section id="top">
+  <div class="row">
     <canvas width="630" id="canvas" class="img-responsive"></canvas> 
   </div>
 </section>
 
-<section id="about-me">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <article>
-          <h2>Hello.</h2>
-          <p>I am a computer engineering student at the University of British Columbia.</p>
-        </article>
-      </div>
-    </div>
-  </div>
+<section class="firstproject">
+  
+  
 </section>
-
-<section id="mystuff">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12 col-xs-12">
-        <article>
-          <h2>Who am I?</h2>
-        </article>
-      </div>
-    </div>
-  </div>
-</section>
-
 
 <footer class="footer" id="footer-info">
   <div class="container footer-list">
@@ -98,6 +76,6 @@
 <script src="./Scripts/headroom.js"></script>
 <script src="./Scripts/jQuery.headroom.js"></script>
 <script src="./Scripts/navbar.js"></script>
-<script src="./Scripts/animated-name.js"></script>
+<script src="./Scripts/animated-projectname.js"></script>
 </body>
 </html>
