--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="navlist">
             <ul class="nav navbar-nav">
               <li>
-                <a href="#" class="btn btn-about"></a>         
+                <a href="javascript: void(0);" class="btn btn-about"></a>         
                 <span class="hover-hide hover-about">about</span>
               </li>
               <li>
@@ -30,7 +30,7 @@
                 <span class="hover-hide hover-resume">resume</span>
               </li>
               <li>
-                <a href="#" class="btn btn-projects"></a>
+                <a href="./projects.html" class="btn btn-projects"></a>
                 <span class="hover-hide hover-projects">projects</span>
               </li>
               <li>
