updated working link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="row">
         <div class="col-md-4 col-xs-4">
           <div class="navbar-header">
-            <a href="#" class="navbar-brand" id="logo"></a>
+            <a href="/" class="navbar-brand" id="logo"></a>
           </div>
         </div>
         <div class="nav-icon-row col-md-8 col-xs-8">
