updated working link

--- a/projects.html
+++ b/projects.html
@@ -16,14 +16,14 @@
       <div class="row">
         <div class="col-md-5 col-xs-5">
           <div class="navbar-header">
-            <a href="#" class="navbar-brand" id="logo"></a>
+            <a href="/" class="navbar-brand" id="logo"></a>
           </div>
         </div>
         <div class="nav-icon-row col-md-7 col-xs-7">
           <div class="navlist">
             <ul class="nav navbar-nav">
               <li>
-                <a href="#" class="btn btn-about"></a>         
+                <a href="javascript: void(0);" class="btn btn-about"></a>         
                 <span class="hover-hide hover-about">about</span>
               </li>
               <li>
@@ -54,7 +54,7 @@
 
 <section class="firstproject">
   
-  
+
 </section>
 
 <footer class="footer" id="footer-info">
