--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <title>Steven Shih</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="./Stylesheets/navbar.css">
-  <link rel="stylesheet" href="./Stylesheets/custom.css">
+  <link rel="stylesheet" href="./stylesheets/navbar.css">
+  <link rel="stylesheet" href="./stylesheets/custom.css">
+  <link rel="stylesheet" href="./stylesheets/typed.css">
 </head>
 <body>
 
@@ -72,6 +73,38 @@
       <div class="col-md-12 col-xs-12">
         <article>
           <h2>Who am I?</h2>
+          <div id="personal_skills" class="row">
+            <div class="col-md-4 col-md-offset-1">
+              <div class="passionpic">
+                <figure>
+                  <img src="./images/Violin.svg">
+                </figure>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="words">
+                <h3>Interests</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit tempora voluptatibus ipsam commodi sit, adipisci deleniti dicta sequi ea, excepturi. Porro, amet commodi animi quidem vel perferendis minima. Accusamus, dolor!</p>
+              </div>
+            </div>
+          </div>
+          <div id="tech_skills" class="row">
+            <div class="col-md-4 col-md-push-7">
+              <div class="computer_project">
+                <figure id="macbook">
+                  <div class="macbook-img">
+                    <div class="code" style="white-space:pre"></div><!-- Stevens-MacBook-Pro:~ stevenshih$ -->
+                  </div>
+                </figure>
+              </div>
+            </div>
+            <div class="col-md-6 col-md-pull-3">
+              <div class="words">
+                <h3>Programming</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique rerum soluta praesentium, ea dignissimos neque, assumenda odit. Inventore voluptatibus amet at odit, totam, delectus mollitia esse ex cum explicabo, minima!</p>
+              </div>
+            </div>
+          </div>
         </article>
       </div>
     </div>
@@ -92,12 +125,14 @@
 </footer>
 
 
-<script src="./Scripts/jquery-3.2.1.js"></script>
+<script src="./scripts/jquery-3.2.1.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<!-- <script src="./Scripts/bootstrap.min.js"></script> -->
-<script src="./Scripts/headroom.js"></script>
-<script src="./Scripts/jQuery.headroom.js"></script>
-<script src="./Scripts/navbar.js"></script>
-<script src="./Scripts/animated-name.js"></script>
+<!-- <script src="./scripts/bootstrap.min.js"></script> -->
+<script src="./scripts/headroom.js"></script>
+<script src="./scripts/jQuery.headroom.js"></script>
+<script src="./scripts/typed.js"></script>
+<script src="./scripts/navbar.js"></script>
+<script src="./scripts/animated-name.js"></script>
+<script src="./scripts/typingcode.js"></script>
 </body>
 </html>
