--- a/projects.html
+++ b/projects.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Projects</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="./Stylesheets/navbar.css">
-  <link rel="stylesheet" href="./Stylesheets/projects.css">
+  <link rel="stylesheet" href="./stylesheets/navbar.css">
+  <link rel="stylesheet" href="./stylesheets/projects.css">
 </head>
 <body>
 
@@ -70,12 +70,12 @@
 </footer>
 
 
-<script src="./Scripts/jquery-3.2.1.js"></script>
+<script src="./scripts/jquery-3.2.1.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<!-- <script src="./Scripts/bootstrap.min.js"></script> -->
-<script src="./Scripts/headroom.js"></script>
-<script src="./Scripts/jQuery.headroom.js"></script>
-<script src="./Scripts/navbar.js"></script>
-<script src="./Scripts/animated-projectname.js"></script>
+<!-- <script src="./scripts/bootstrap.min.js"></script> -->
+<script src="./scripts/headroom.js"></script>
+<script src="./scripts/jQuery.headroom.js"></script>
+<script src="./scripts/navbar.js"></script>
+<script src="./scripts/animated-projectname.js"></script>
 </body>
 </html>
