--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <title>Steven Shih</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="./stylesheets/navbar.css">
-  <link rel="stylesheet" href="./stylesheets/custom.css">
-  <link rel="stylesheet" href="./stylesheets/typed.css">
+  <link rel="stylesheet" href="/stylesheets/navbar.css">
+  <link rel="stylesheet" href="/stylesheets/custom.css">
+  <link rel="stylesheet" href="/stylesheets/typed.css">
 </head>
 <body>
 
