--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
 <script src="./scripts/jquery-3.2.1.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <!-- <script src="./scripts/bootstrap.min.js"></script> -->
-<script src="./scripts/headroom.js"></script>
-<script src="./scripts/jQuery.headroom.js"></script>
-<script src="./scripts/typed.js"></script>
-<script src="./scripts/navbar.js"></script>
-<script src="./scripts/animated-name.js"></script>
-<script src="./scripts/typingcode.js"></script>
+<script src="/scripts/headroom.js"></script>
+<script src="/scripts/jQuery.headroom.js"></script>
+<script src="/scripts/typed.js"></script>
+<script src="/scripts/navbar.js"></script>
+<script src="/scripts/animated-name.js"></script>
+<script src="/scripts/typingcode.js"></script>
 </body>
 </html>
