--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <title>Steven Shih</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="/stylesheets/navbar.css">
-  <link rel="stylesheet" href="/stylesheets/custom.css">
-  <link rel="stylesheet" href="/stylesheets/typed.css">
+  <link rel="stylesheet" href="./stylesheets/navbar.css">
+  <link rel="stylesheet" href="./stylesheets/custom.css">
+  <link rel="stylesheet" href="./stylesheets/typed.css">
 </head>
 <body>
 
@@ -77,7 +77,7 @@
             <div class="col-md-4 col-md-offset-1">
               <div class="passionpic">
                 <figure>
-                  <img src="./images/Violin.svg">
+                  
                 </figure>
               </div>
             </div>
@@ -128,11 +128,11 @@
 <script src="./scripts/jquery-3.2.1.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <!-- <script src="./scripts/bootstrap.min.js"></script> -->
-<script src="/scripts/headroom.js"></script>
-<script src="/scripts/jQuery.headroom.js"></script>
-<script src="/scripts/typed.js"></script>
-<script src="/scripts/navbar.js"></script>
-<script src="/scripts/animated-name.js"></script>
-<script src="/scripts/typingcode.js"></script>
+<script src="./scripts/headroom.js"></script>
+<script src="./scripts/jQuery.headroom.js"></script>
+<script src="./scripts/typed.js"></script>
+<script src="./scripts/navbar.js"></script>
+<script src="./scripts/animated-name.js"></script>
+<script src="./scripts/typingcode.js"></script>
 </body>
 </html>
