--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="col-md-4 col-md-offset-1">
               <div class="passionpic">
                 <figure>
-                  
+                  <img src="./images/Violin.svg">
                 </figure>
               </div>
             </div>
