--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <div class="computer_project">
                 <figure id="macbook">
                   <div class="macbook-img">
-                    <div class="code" style="white-space:pre"></div><!-- Stevens-MacBook-Pro:~ stevenshih$ -->
+                    <span class="code" style="white-space:pre"></span><!-- Stevens-MacBook-Pro:~ stevenshih$ -->
                   </div>
                 </figure>
               </div>
