--- a/projects.html
+++ b/projects.html
@@ -90,9 +90,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class="imac-picture">
-          
-        </div>
+        <img src="./images/imac.svg" alt="" class="imac-picture img-responsive">
         <div class="info">
           <h2>Node.js Server</h2>
           <p>iMac with several code editors open</p>
