--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <span class="hover-hide hover-resume">resume</span>
               </li>
               <li>
-                <a href="permalink: ./projects.html" class="btn btn-projects"></a>
+                <a href="./projects" class="btn btn-projects"></a>
                 <span class="hover-hide hover-projects">projects</span>
               </li>
               <li>
