--- a/projects.html
+++ b/projects.html
@@ -18,14 +18,14 @@
       <div class="row">
         <div class="col-md-3 col-xs-3">
           <div class="navbar-header">
-            <a href="/" class="navbar-brand" id="logo"></a>
+            <a href="http://steveshih.com/" class="navbar-brand" id="logo"></a>
           </div>
         </div>
         <div class="nav-icon-row col-md-9 col-xs-9">
           <div class="navlist">
             <ul class="nav navbar-nav">
               <li>
-                <a href="javascript: void(0);" class="btn btn-about"></a>         
+                <a href="http://steveshih.com/" class="btn btn-about"></a>         
                 <span class="hover-hide hover-about">about</span>
               </li>
               <li>
@@ -33,7 +33,7 @@
                 <span class="hover-hide hover-resume">resume</span>
               </li>
               <li>
-                <a href="#" class="btn btn-projects"></a>
+                <a href="http://steveshih.com/projects" class="btn btn-projects"></a>
                 <span class="hover-hide hover-projects">projects</span>
               </li>
               <li>
