updated more projects

--- a/projects.html
+++ b/projects.html
@@ -58,9 +58,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class="picture">
-          
-        </div>
+        <img src="./images/safesalechrome.svg" alt="" class="chrome-picture img-responsive">
         <div class="info">
           <h2>Hackathon Safe Sale</h2>
           <p>Show a browser window with sample of Safe Sale</p>
@@ -90,7 +88,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <img src="./images/imac.svg" alt="" class="imac-picture img-responsive">
+        <img src="./images/imac2.svg" alt="" class="imac-picture img-responsive">
         <div class="info">
           <h2>Node.js Server</h2>
           <p>iMac with several code editors open</p>
