--- a/projects.html
+++ b/projects.html
@@ -72,9 +72,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class="android-picture">
-          
-        </div>
+        <img src="./images/android.svg" alt="" class="android-picture img-responsive">
         <div class="info">
           <h2>Android Story App</h2>
           <p>Show an Android Phone with image of product </p>
