--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="initial-scale=1">
   <title>Steven Shih</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Judson|Montserrat|Quando" rel="stylesheet">
   <link rel="stylesheet" href="./stylesheets/navbar.css">
   <link rel="stylesheet" href="./stylesheets/custom.css">
   <link rel="stylesheet" href="./stylesheets/typed.css">
