--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
   <title>Projects</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Judson|Montserrat|Quando" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Sansita|Scope+One|Shrikhand" rel="stylesheet">
   <link rel="stylesheet" href="./stylesheets/navbar.css">
   <link rel="stylesheet" href="./stylesheets/projects.css">
   <link rel="stylesheet" href="./stylesheets/typed.css">
