--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <span class="hover-hide hover-projects">projects</span>
               </li>
               <li>
-                <a href="#" class="btn btn-contact"></a>
+                <a href="@gmail.com||stevenshih1997" class="btn btn-contact"></a>
                 <span class="hover-hide hover-contact">contact</span>
               </li>
             </ul>
