added email contact

--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
                 <span class="hover-hide hover-projects">projects</span>
               </li>
               <li>
-                <a href="@gmail.com||stevenshih1997" class="btn btn-contact"></a>
+                <a href="mailto:stevenshih1997@gmail.com" class="btn btn-contact"></a>
                 <span class="hover-hide hover-contact">contact</span>
               </li>
             </ul>
