added unfinished resume

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <span class="hover-hide hover-about">about</span>
               </li>
               <li>
-                <a href="#" class="btn btn-resume"></a> 
+                <a href="./resume/resume.pdf" class="btn btn-resume"></a> 
                 <span class="hover-hide hover-resume">resume</span>
               </li>
               <li>
