changed angellist link

--- a/projects.html
+++ b/projects.html
@@ -119,7 +119,7 @@
       <div class="footer-icons col-md-12 col-xs-12">
         <a href="http://www.linkedin.com/in/stevenshih1997"><span class="icon icon-linkedin"></span></a>
         <a href="https://github.com/stevenshih1997"><span class="icon icon-github"></span></a>
-        <a href="https://angel.co/steven-shih-1"><span class="icon icon-angelList"></span></a>
+        <a href="https://angel.co/stevenshih1997"><span class="icon icon-angelList"></span></a>
       </div>
     </div>
   </div>
