Added website contents

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="col-md-6">
               <div class="words">
                 <h3>Interests</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit tempora voluptatibus ipsam commodi sit, adipisci deleniti dicta sequi ea, excepturi. Porro, amet commodi animi quidem vel perferendis minima. Accusamus, dolor!</p>
+                <p>I enjoy playing the violin, reading, traveling, going to the gym, and spending time with friends and family. I dabble in some design, and am interested in learning more. I have participated in orchestras, and love all types of music!</p>
               </div>
             </div>
           </div>
@@ -103,7 +103,7 @@
             <div class="col-md-6 col-md-pull-3">
               <div class="words">
                 <h3>Programming</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique rerum soluta praesentium, ea dignissimos neque, assumenda odit. Inventore voluptatibus amet at odit, totam, delectus mollitia esse ex cum explicabo, minima!</p>
+                <p>I program in my spare time and work on random projects. I am passionate about all types of programming, and have a variety of experiences developing things, from apps, to websites, to servers. Currently, I am learning more about different frameworks such as React.js.</p>
               </div>
             </div>
           </div>
