--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@
         <img src="./images/safesalechrome.svg" alt="" class="chrome-picture img-responsive">
         <div class="info">
           <h2>Hackathon Safe Sale</h2>
-          <p>Show a browser window with sample of Safe Sale</p>
+          <p>A chrome extension which uses criminal activity data to decide on the safest place to make a trade between a buyer and a seller on Craigslist.</p>
         </div>
       </div>
     </div>
@@ -76,7 +76,7 @@
         <img src="./images/android.svg" alt="" class="android-picture img-responsive">
         <div class="info">
           <h2>Android Story App</h2>
-          <p>Show an Android Phone with image of product </p>
+          <p>An Android app with recording and playback capabilities to accompany a children's storybook to make learning fun.</p>
         </div>
       </div>
     </div>
@@ -89,8 +89,8 @@
       <div class="col-md-12">
         <img src="./images/imac2.svg" alt="" class="imac-picture img-responsive">
         <div class="info">
-          <h2>Node.js Server</h2>
-          <p>iMac with several code editors open</p>
+          <h2>REST Server</h2>
+          <p>A server which interacts with an Internet of Things vending machine, as well as an Android app and Raspberry pi. Has secure login authentication and also facial recognition login using Kairos' API.</p>
         </div>
       </div>
     </div>
@@ -106,7 +106,7 @@
         </div>
         <div class="info">
           <h2>This Website!</h2>
-          <p>Dark Code editor coding itself!</p>
+          <p>This website was coded from scratch with the use of a few libraries and the Bootstrap framework.</p>
         </div>
       </div>
     </div>
