Added website contents

--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
       <div class="col-md-12">
         <img src="./images/safesalechrome.svg" alt="" class="chrome-picture img-responsive">
         <div class="info">
-          <h2>Hackathon Safe Sale</h2>
+          <h2>Safe Sale</h2>
           <p>A chrome extension which uses criminal activity data to decide on the safest place to make a trade between a buyer and a seller on Craigslist.</p>
         </div>
       </div>
@@ -75,7 +75,7 @@
       <div class="col-md-12">
         <img src="./images/android.svg" alt="" class="android-picture img-responsive">
         <div class="info">
-          <h2>Android Story App</h2>
+          <h2>NHI Story App</h2>
           <p>An Android app with recording and playback capabilities to accompany a children's storybook to make learning fun.</p>
         </div>
       </div>
@@ -89,8 +89,8 @@
       <div class="col-md-12">
         <img src="./images/imac2.svg" alt="" class="imac-picture img-responsive">
         <div class="info">
-          <h2>REST Server</h2>
-          <p>A server which interacts with an Internet of Things vending machine, as well as an Android app and Raspberry pi. Has secure login authentication and also facial recognition login using Kairos' API.</p>
+          <h2>Vedni Bank Server</h2>
+          <p>A REST server which interacts with an Internet of Things vending machine, as well as an Android app and Raspberry pi. Has secure login authentication and also facial recognition login using Kairos' API.</p>
         </div>
       </div>
     </div>
