fixed projects.html text issues on mobile

--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,7 @@
 <section id="hackathon">
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-12 col-xs-12">
         <img src="./images/safesalechrome.svg" alt="" class="chrome-picture img-responsive">
         <div class="info">
           <h2>Safe Sale</h2>
@@ -72,7 +72,7 @@
 <section id="android">
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-12 col-xs-12">
         <img src="./images/android.svg" alt="" class="android-picture img-responsive">
         <div class="info">
           <h2>NHI Story App</h2>
@@ -86,7 +86,7 @@
 <section id="nodejs">
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-12 col-xs-12">
         <img src="./images/imac2.svg" alt="" class="imac-picture img-responsive">
         <div class="info">
           <h2>Vedni Bank Server</h2>
