--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <div class="computer_project">
                 <figure id="macbook">
                   <div class="macbook-img">
-                    <span class="code" style="white-space:pre"></span><!-- Stevens-MacBook-Pro:~ stevenshih$ -->
+                    <span class="code" style="white-space:pre"></span>
                   </div>
                 </figure>
               </div>
@@ -103,7 +103,7 @@
             <div class="col-md-6 col-md-pull-3">
               <div class="words">
                 <h3>Programming</h3>
-                <p>I program in my spare time and work on random projects. I am passionate about all types of programming, and have a variety of experiences developing things, from apps, to websites, to servers. Currently, I am learning more about different frameworks such as React.js.</p>
+                <p>I program in my spare time and work on random projects. I am passionate about all types of programming, and have a variety of experiences developing things, from apps, to websites, to servers. Currently, I am learning more about different technologies such as React.js.</p>
               </div>
             </div>
           </div>
