--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,8 @@
   <title>Projects</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Judson|Montserrat|Quando" rel="stylesheet">
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" href="http://steveshih.com/favicon.ico">
+  <link rel="icon" type="image/png" href="http://steveshih.com/favicon.png">
   <link rel="stylesheet" href="./stylesheets/navbar.css">
   <link rel="stylesheet" href="./stylesheets/projects.css">
   <link rel="stylesheet" href="./stylesheets/typed.css">
