added icons for ios

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <link href="https://fonts.googleapis.com/css?family=Judson|Montserrat|Quando" rel="stylesheet">
   <link rel="shortcut icon" href="http://steveshih.com/favicon.ico">
   <link rel="icon" type="image/png" href="http://steveshih.com/favicon.png">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://steveshih.com/assets/144.png">
+  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="http://steveshih.com/assets/120.png">
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://steveshih.com/assets/72.png">
+  <link rel="apple-touch-icon-precomposed" href="http://steveshih.com/assets/57.png">
   <link rel="stylesheet" href="./stylesheets/navbar.css">
   <link rel="stylesheet" href="./stylesheets/custom.css">
   <link rel="stylesheet" href="./stylesheets/typed.css">
