--- a/index.html
+++ b/index.html
@@ -7,20 +7,12 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Judson|Montserrat|Quando" rel="stylesheet">
   
-<!--   <link rel="shortcut icon" href="http://steveshih.com/favicon.ico">
+  <link rel="shortcut icon" href="http://steveshih.com/favicon.ico">
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://steveshih.com/assets/144.png">
   <link rel="apple-touch-icon-precomposed" sizes="120x120" href="http://steveshih.com/assets/120.png">
   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://steveshih.com/assets/72.png">
   <link rel="apple-touch-icon-precomposed" href="http://steveshih.com/assets/57.png">
-  <link rel="icon" type="image/png" href="http://steveshih.com/favicon.png"> -->
-
-
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/manifest.json">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="theme-color" content="#ffffff">
+  <link rel="icon" type="image/png" href="http://steveshih.com/favicon.png">
 
   <link rel="stylesheet" href="./stylesheets/navbar.css">
   <link rel="stylesheet" href="./stylesheets/custom.css">
