--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://steveshih.com/assets/144.png">
   <link rel="apple-touch-icon-precomposed" sizes="120x120" href="http://steveshih.com/assets/120.png">
   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://steveshih.com/assets/72.png">
-  <link rel="apple-touch-icon-precomposed" href="http://steveshih.com/assets/57.png">
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="http://steveshih.com/assets/57.png">
   <link rel="icon" type="image/png" href="http://steveshih.com/favicon.png">
 
   <link rel="stylesheet" href="./stylesheets/navbar.css">
