--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <link href="https://fonts.googleapis.com/css?family=Judson|Montserrat|Quando" rel="stylesheet">
   
   <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://steveshih.com/assets/144.png">
-  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="http://steveshih.com/assets/120.png">
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://steveshih.com/assets/72.png">
-  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="http://steveshih.com/assets/57.png">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/144.png">
+  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="assets/120.png">
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/72.png">
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/57.png">
   <link rel="icon" type="image/png" href="assets/favicon.png">
 
   <link rel="stylesheet" href="./stylesheets/navbar.css">
