--- a/projects.html
+++ b/projects.html
@@ -14,11 +14,11 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Judson|Montserrat|Quando" rel="stylesheet">
   
-  <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
+  <!-- <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/144.png">
   <link rel="apple-touch-icon-precomposed" sizes="120x120" href="assets/120.png">
   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/72.png">
-  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/57.png">
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/57.png"> -->
   <link rel="icon" type="image/png" href="assets/favicon.png">
 
   <link rel="stylesheet" href="./stylesheets/navbar.css">
