changed homepage info

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="col-md-6">
               <div class="words">
                 <h3>Interests</h3>
-                <p>I enjoy playing the violin, reading, traveling, going to the gym, and spending time with friends and family. I dabble in some design, and am interested in learning more. I have participated in orchestras, and love all types of music!</p>
+                <p>I enjoy playing the violin, reading, and traveling. I dabble in some design, and am interested in learning more. I have participated in orchestras, and love all types of music!</p>
               </div>
             </div>
           </div>
