--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         <article>
           <h2>Hello.</h2>
           <p>I am a computer engineering student at the University of British Columbia.</p>
+          <img src="./images/Article.svg">
         </article>
       </div>
     </div>
