--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -161,4 +161,4 @@
 <script src="./scripts/animated-projectname.js"></script>
 <script src="./scripts/typingwebsite.js"></script>
 </body>
-</html>
+</html> -->
