--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   </div>
 </section>
 
-<section id="mystuff">
+<!-- <section id="mystuff">
   <div class="container">
     <div class="row">
       <div class="col-md-12 col-xs-12">
@@ -136,7 +136,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 
 <footer class="footer" id="footer-info">
